--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ avatar: "/img/avatar-icon.png"
 # List of links in the navigation bar
 navbar-links:
   Home: ""
+  Projects: "projects"
   About Me: "aboutme"
-  #Author's home: "http://Tynes.github.io"
   
 # --- Footer options --- #
 
