--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: A blog following my adventures through life. Currently attending Ha
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/icon.jpg"
 
 # List of links in the navigation bar
 navbar-links:
