--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ footer-links-active:
 disqus: "tynesblog"
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-73564564-1"
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
